testdata/baselines/reference/submodule/conformance/exportPropertyAssignmentNameResolution.errors.txt
bug24492.js(2,5): error TS2454: Variable 'D' is used before being assigned.


==== bug24492.js (1 errors) ====
    module.exports.D = class { }
    new D()
        ~
!!! error TS2454: Variable 'D' is used before being assigned.
    